# Geni

./: .gitignore
Ingestion/: chunk.py  db.py  embed.py  extract.py  ingest.py  ingestionPrompts.py  main.py  parser.py  pyproject.toml
Server/: package-lock.json  package.json  tsconfig.json
Server/src/: server.ts
Server/src/lib/: openai.ts  supabase.ts
Server/src/routes/: query.ts
Server/src/services/: embed.ts  prompt.ts  retrieve.ts  synthesize.ts
supabase/: config.toml
supabase/migrations/: 20260331143142_geni_schema.sql
