[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.81",
    "boto3-stubs[s3,textract]>=1.42.81",
    "openai>=2.30.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.3",
]
